--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ scipy==1.15.2
 six==1.17.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
-tensorflow
+tensorflow==2.13.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 threadpoolctl==3.5.0
